--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
   },
   "dependencies": {
     "@nuxtjs/storybook": "^8.3.2",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "nuxt": "^3.14.159",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "storybook": "8.0.8",
-    "@types/node": "^18.17.5",
-    "@storybook/vue3": "8.0.8",
-    "@storybook-vue/nuxt": "0.2.6",
     "@nuxtjs/storybook": "7.0.2",
-    "@storybook/addon-links": "8.0.8",
-    "@storybook/builder-vite": "8.0.8",
+    "@storybook-vue/nuxt": "0.2.6",
     "@storybook/addon-essentials": "8.0.8",
     "@storybook/addon-interactions": "8.0.8",
+    "@storybook/addon-links": "8.0.8",
+    "@storybook/blocks": "8.0.8",
+    "@storybook/builder-vite": "8.0.8",
     "@storybook/test": "8.0.8",
-    "@storybook/blocks": "8.0.8"
+    "@storybook/vue3": "8.0.8",
+    "@types/node": "^18.17.5",
+    "storybook": "8.0.8"
   }
 }
