--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nuxtjs/storybook": "^8.3.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "nuxt": "^3.14.159",
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
     "vue": "latest",
     "vue-router": "latest"
   },
