Added tailwind config

--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "storybook": "storybook dev --port 6006",
-    "build-storybook": "storybook build"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/storybook": "^8.3.2",
+    "@nuxt/image": "^1.8.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "firebase": "^11.0.2",
     "nuxt": "^3.14.159",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
@@ -21,16 +20,6 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/storybook": "7.0.2",
-    "@storybook-vue/nuxt": "0.2.6",
-    "@storybook/addon-essentials": "8.0.8",
-    "@storybook/addon-interactions": "8.0.8",
-    "@storybook/addon-links": "8.0.8",
-    "@storybook/blocks": "8.0.8",
-    "@storybook/builder-vite": "8.0.8",
-    "@storybook/test": "8.0.8",
-    "@storybook/vue3": "8.0.8",
-    "@types/node": "^18.17.5",
-    "storybook": "8.0.8"
+    "@types/node": "^18.17.5"
   }
 }
