--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@vueuse/motion": "^2.2.6",
     "firebase": "^11.0.2",
     "nuxt": "^3.14.159",
     "sass": "^1.81.0",
